--- a/sample_config.env
+++ b/sample_config.env
@@ -1,18 +1,18 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "7350916"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "776fec9b07afa7d5cc74425852c9835b"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = ""
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
 ADMINS = "1234567890"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
+OWNER = "akuajayanolehkan"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -23,7 +23,7 @@ FORCE_SUB_GROUP = 0
 FORCE_SUB_CHANNEL = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = -1001641476734
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
