--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "12161060"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "4691596dd0db86df02cf7d54ec73bb68"
 
 # Masukan BOT TOKEN dari @botfather
 TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
@@ -12,7 +12,7 @@ TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
 ADMINS = "1234567890"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
+OWNER = "akuiyaajakukai"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -23,11 +23,11 @@ FORCE_SUB_GROUP = 0
 FORCE_SUB_CHANNEL = 0
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = "-1001641476734"
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "5395896784:AAG4g8S262T8HOFT_ue8WfLf9t-VdjvGrh0"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
