--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ APP_ID = "12161060"
 API_HASH = "4691596dd0db86df02cf7d54ec73bb68"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = "5395896784:AAG4g8S262T8HOFT_ue8WfLf9t-VdjvGrh0"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
@@ -27,7 +27,7 @@ CHANNEL_ID = "-1001641476734"
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = "5395896784:AAG4g8S262T8HOFT_ue8WfLf9t-VdjvGrh0"
+DATABASE_URL = "postgres://rjswuhsc:OvhYhh20Xnp88EPxinopZoYttB1cT4hm@tiny.db.elephantsql.com/rjswuhsc"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
