--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ APP_ID = "12161060"
 API_HASH = "4691596dd0db86df02cf7d54ec73bb68"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "5330841764:AAHEvFmztd_I1wpt8hrm3beJC8lJM6yCYSk"
+TG_BOT_TOKEN = "5264241760:AAFEOgAHHZ6AMxPImlLzkhdsta4B364O4SA"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
@@ -27,7 +27,7 @@ CHANNEL_ID = "-1001641476734"
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = "postgres://ydwmtkza:vkx3J9AHPb9wHkxN6jj7O_kEuSxM7_9q@tiny.db.elephantsql.com/ydwmtkza"
+DATABASE_URL = "postgres://fkkzwrdv:bSHPcV4XXO6xfGR_pmTuKfM2bhEINm1q@tiny.db.elephantsql.com/fkkzwrdv"
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
