--- a/bot1.env
+++ b/bot1.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5395896784:AAG4g8S262T8HOFT_ue8WfLf9t-VdjvGrh0
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://rjswuhsc:OvhYhh20Xnp88EPxinopZoYttB1cT4hm@tiny.db.elephantsql.com/rjswuhsc
 PROTECT_CONTENT = True
