--- a/bot2.env
+++ b/bot2.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5325668535:AAFGALaxcyKZae3s_Ak1O2E7_PaCP3jJSp0
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://ibossjko:7_GEzeFHJmP4yeuGAe4MPcj9LUt8aDMo@tiny.db.elephantsql.com/ibossjko
 PROTECT_CONTENT = True
