--- a/bot3.env
+++ b/bot3.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5330841764:AAHEvFmztd_I1wpt8hrm3beJC8lJM6yCYSk
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://ydwmtkza:vkx3J9AHPb9wHkxN6jj7O_kEuSxM7_9q@tiny.db.elephantsql.com/ydwmtkza
 PROTECT_CONTENT = True
