--- a/bot11.env
+++ b/bot11.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5378199382:AAFF-KhiAleXhtZE51LtOh0gc4R6FP4y7k0
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://relbqhqh:fUtQWDb_85TAaN2dhGQEfY3wuom_i2m9@tiny.db.elephantsql.com/relbqhqh
 PROTECT_CONTENT = True
