--- a/bot12.env
+++ b/bot12.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5311160953:AAHTrnY2_K_D_LyDSfDcUVRyOEawjayJ1kk
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://pdbwuceu:LwymHaRlM71OyoAiWbtOCA2mhAr7yqpG@tiny.db.elephantsql.com/pdbwuceu
 PROTECT_CONTENT = True
