--- a/bot16.env
+++ b/bot16.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5377007928:AAFCmMyzdlk0os_lvST60OnqFPFJEXtW5mo
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://awydoxim:g-4zFU_IdNr0S4q4UrwCDoomDhq9_sP9@tiny.db.elephantsql.com/awydoxim
 PROTECT_CONTENT = True
