--- a/bot17.env
+++ b/bot17.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5320056800:AAFnbQQDtVG_Grnd-iRhQVl-kJ6II7jUC_M
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://fcgugkyn:Ux1Ae1MGqhvFsHX2n82nBDFMqUlXiJAZ@tiny.db.elephantsql.com/fcgugkyn
 PROTECT_CONTENT = True
