--- a/bot20.env
+++ b/bot20.env
@@ -1,6 +1,6 @@
 APP_ID = 12161060
 API_HASH = 4691596dd0db86df02cf7d54ec73bb68
-TG_BOT_TOKEN = 
+TG_BOT_TOKEN = 5145627649:AAFGSOb8T6R4c4IgcTnaJj73CdSeCmBNP5Y
 ADMINS = 1983272869
 OWNER = heroku_premium
 OWNER_ID = 1983272869
@@ -9,5 +9,5 @@ FORCE_SUB_CHANNEL = 0
 GROUP = tontonvid
 CHANNEL = tontonvid
 CHANNEL_ID = -1001641476734
-DATABASE_URL = 
+DATABASE_URL = postgres://fadtqikb:wXtzS1N-FA7MH2_OUOM6t3ixAczS45GU@tiny.db.elephantsql.com/fadtqikb
 PROTECT_CONTENT = True
